# frugal-ai-challenge

./: .gitignore  README.md  pyproject.toml
frugalai/kd/: offline_teacher.py
frugalai/notebooks/wandb/: latest-run
frugalai/utils/: analytics.py  data_format.py  efficiency_tracker.py  evaluation.py  hardware.py  inference.py  monitoring.py  sampling.py  wandb.py  wandb_handler.py
notebooks/: Baseline_text.ipynb
training/: Baseline_text_LLM.ipynb  Baseline_text_ML.ipynb  FT_Baseline.ipynb  Langchain_Baseline-Copy1.ipynb  Langchain_Baseline.ipynb  Langchain_FT.ipynb  Langchain_FT_ChatTempate.ipynb  Langchain_FT_unsloth_Training.ipynb  README.md  TestFT.ipynb  emissions.csv.bak  monitor_RAM.ipynb  powermetrics_log.txt  requirements.txt  text_LLM.ipynb  text_LLM_Langchain.ipynb  text_LLM_finetuning.ipynb  text_LSTM.ipynb  text_MultinomialNB.ipynb  text_RandomForest.ipynb  text_XgBoost.ipynb  text_langchain.ipynb
training/metrics/: MultinomialNB_accuracy_56_dt_20250130_182104.json  RandomForestClassifier_accuracy_55_dt_20250129_161906.json  RandomForestClassifier_accuracy_57_dt_20250129_162255.json  RandomForestClassifier_accuracy_58_dt_20250129_152927.json  RandomForestClassifier_accuracy_59_dt_20250129_162529.json  RandomForestClassifier_accuracy_60_dt_20250130_145130.json  RandomForestClassifier_accuracy_60_dt_20250130_150902.json  RandomForestClassifier_accuracy_60_dt_20250130_182245.json  deepseek-ai_DeepSeek-R1-Distill-Qwen-1.5B_accuracy_0_dt_20250131_172752.json  mistralai_Mistral-7B-Instruct-v0.1_accuracy_0_dt_20250128_105707.json  (+15 more)
(+32 files in other folders)
